--- a/client/src/app/components/game-card-grid/game-card-grid.component.html
+++ b/client/src/app/components/game-card-grid/game-card-grid.component.html
@@ -1,5 +1,5 @@
 <div class="grid" *ngIf="sheets.length > 0">
-    <ng-container *ngFor="let sheet of getCurrentSheets()">
+    <ng-container class="cards" *ngFor="let sheet of getCurrentSheets()">
         <app-game-card
             class="cell"
             [sheet]="sheet"
@@ -14,3 +14,4 @@
     <button mat-mini-fab *ngIf="currentPage > 0" (click)="prevPage()" color="primary"><mat-icon>keyboard_arrow_left</mat-icon></button>
     <button mat-mini-fab *ngIf="currentPage < totalPages - 1" (click)="nextPage()" color="primary"><mat-icon>keyboard_arrow_right</mat-icon></button>
 </div>
+
