--- a/client/src/app/components/game-card/game-card.component.scss
+++ b/client/src/app/components/game-card/game-card.component.scss
@@ -1,4 +1,21 @@
+* {
+    padding: 0px !important;
+    margin: 0px !important;
+}
 img {
     width: 50%;
-    height: auto;
+    height: 50%;
+    max-width: 320px;
+    max-height: 240px;
+}
+button {
+    padding-left: 1% !important;
+    padding-right: 1% !important;
+}
+.action-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1%;
 }
