--- a/client/src/app/pages/creation-page/creation-page.component.scss
+++ b/client/src/app/pages/creation-page/creation-page.component.scss
@@ -2,7 +2,7 @@ form {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
-    row-gap: 10px;
+    row-gap: 1%;
     grid-template-areas:
         'head head head'
         'leftCanvas switchButton rightCanvas'
@@ -19,7 +19,10 @@ form {
     grid-area: head;
     justify-self: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    column-gap: 1%;
 }
 #gameTitle {
     align-self: center;
@@ -35,10 +38,18 @@ form {
 #leftUpload {
     grid-area: leftUpload;
     justify-self: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: fit-content;
 }
 #rightUpload {
     grid-area: rightUpload;
     justify-self: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: fit-content;
 }
 #options {
     width: 50%;
@@ -62,4 +73,7 @@ form {
 
 .file-input {
     display: none;
+}
+button {
+    padding: 0 8px;
 }
