--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -1,31 +1,31 @@
-<app-header [pageTitle]="'Bienvenue ' + playerName"></app-header>
-<main class="container">
-    <div tabindex="0" autofocus (keyup.t)="playArea.blink()">
-        <h2>Difficulté: {{ difficulty }}</h2>
-        <div class="play-area-container">
-            <app-play-area [playerName]="this.playerName" (difficulty)="onDifficultyChange($event)" class="play-area"></app-play-area>
+<app-header pageTitle="Bienvenue {{playerName}}"></app-header>
+<main class="main-container">
+    <div class="info-container">
+        <h3>Difficulté: {{ difficulty }}</h3>
+        <div class="player1-points" *ngIf="person">
+            <h3>{{ person.name }}: {{ person.differencesFound }}/{{ this.differences }}</h3>
+        </div>
+        <div class="player2-points" *ngIf="opponent">
+            <h3>{{ opponent.name }}: {{ opponent.differencesFound }}/{{ this.differences }}</h3>
+        </div>
+        <div class="time-container">
+            <h3>Temps: {{ formattedTime }}</h3>
         </div>
     </div>
-    <div class="options-container">
+    <div class="play-area-container" tabindex="0" autofocus (keyup.t)="playArea.blink()">
+        <app-play-area [playerName]="this.playerName" (difficulty)="onDifficultyChange($event)" class="play-area"></app-play-area>
+    </div>
+    
+    <div class="replay-options-container">
         <button mat-stroked-button color="primary" *ngIf="isReplayPlaying && !isReplayPaused" (click)="pauseReplay()">Pause Replay</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayPaused" (click)="resumeReplay()">Resume Replay</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="restartReplay()">Restart Replay</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(1)">1X</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(2)">2X</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(3)">3X</button>
-        <div class="points-container">
-            <div class="player1-points" *ngIf="person">
-                <h2>{{ person.name }} {{ person.differencesFound }}/{{ this.differences }}</h2>
-            </div>
-            <div class="time-container">
-                <h2>{{ formattedTime }}</h2>
-            </div>
-            <div class="player2-points" *ngIf="opponent">
-                <h2>{{ opponent.name }} {{ opponent.differencesFound }}/{{ this.differences }}</h2>
-            </div>
-        </div>
     </div>
-
+    
+    
     <div class="chat-zone-container">
         <app-chat-zone
             [playerName]="playerName"
