--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -1,107 +1,47 @@
-$primary-color: #1976d2;
-$background-color: #f5f5f5;
-$border-color: #ccc;
+$my-indigo: #3F51B5;
+$my-pink: #E91E63;
 
-main {
+.main-container {
     display: grid;
-    grid-template-areas:
-        'options'
-        'playarea'
-        'chat';
+    grid-template-areas: 
+        'info'
+        'overlay'
+        'replay';
 }
-
-.options-container {
-    grid-area: options;
+.info-container {
+    grid-area: info;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    color: $my-indigo;
 }
-.playarea {
-    grid-area: playarea;
+.play-area-container {
+    grid-area: overlay;
 }
 .chat-zone-container {
-    grid-area: chat;
+    width: fit-content;
+    height: fit-content;
+    grid-area: overlay;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 .chat-zone {
-    flex-grow: 1;
+    width: fit-content;
+    height: fit-content;
 }
 
-.game-score {
+.replay-options-container {
+    grid-area: replay;
     display: flex;
-    align-self: flex-start;
-}
-
-.header {
-    width: 100%;
-    display: flex;
+    flex: row;
     justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
 }
-
-.app-header {
-    background-color: $primary-color;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    font-size: 24px;
-}
-
-.exit {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #fff;
-    background-color: transparent;
-}
-
-.exit:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
-}
-
-.info-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.welcome-message {
-    width: 100%;
-    text-align: center;
-}
-
-.player-name {
-    font-weight: bold;
-}
-
-.time-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    margin-left: 20px;
-    font-size: 24px;
-}
-
-.points-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-}
-
-.player1-points,
 .player2-points {
-    background-color: #ddd;
-    padding: 10px;
-    border-radius: 5px;
-    margin-right: 10px;
+    color: $my-pink;
 }
+
 div:focus {
     border: none;
     outline: none;
