limited time merged

--- a/client/src/app/pages/limited-time-game-page/limited-time-game-page.component.html
+++ b/client/src/app/pages/limited-time-game-page/limited-time-game-page.component.html
@@ -1,2 +1,26 @@
-<div>{{ this.gameLogic.timeLimit }}</div>
-<app-time-limit-play-ground></app-time-limit-play-ground>
+<app-header pageTitle="Bienvenue {{person.name}}"></app-header>
+<main class="main-container">
+    <div class="info-container">
+        <div class="player1-points" *ngIf="person">
+            <h3>{{ person.name }}: {{ person.differencesFound }}/{{ this.differences }}</h3>
+        </div>
+        <div class="player2-points" *ngIf="opponent">
+            <h3>{{ opponent.name }}: {{ opponent.differencesFound }}/{{ this.differences }}</h3>
+        </div>
+        <div class="time-container">
+            <h3>Temps: {{ timeLeft }}</h3>
+        </div>
+    </div>
+    <div class="play-area-container" tabindex="0" autofocus>
+        <app-time-limit-play-ground></app-time-limit-play-ground>
+    </div>
+    
+    <div class="chat-zone-container">
+        <app-chat-zone
+            [playerName]="person.name"
+            [opponent]="opponent ? opponent.name : ''"
+            [chatMessages]="this.chatMessages"
+            class="chat-zone"
+        ></app-chat-zone>
+    </div>
+</main>
