updated config buttons

--- a/client/src/app/components/config-buttons/config-buttons.component.html
+++ b/client/src/app/components/config-buttons/config-buttons.component.html
@@ -10,4 +10,14 @@
             <mat-icon>build</mat-icon>
         </button>
     </div>
+    <div class="settings-button">
+        <button   (click)="openHistory()" mat-mini-fab color="primary" matTooltip="Historique des parties">
+            <mat-icon>history</mat-icon>
+        </button>
+    </div>
+    <div class="settings-button">
+        <button   (click)="openReset()" mat-mini-fab color="primary" matTooltip="Remise des données à leur état initial">
+            <mat-icon>autorenew</mat-icon>
+        </button>
+    </div>
 </div>
