--- a/client/src/app/components/chat-zone/chat-zone.component.scss
+++ b/client/src/app/components/chat-zone/chat-zone.component.scss
@@ -1,9 +1,14 @@
-$my-indigo: #3F51B5;
-$my-pink: #E91E63;
+$my-indigo: #3f51b5;
+$my-pink: #e91e63;
+$my-green: #66bb6a;
+$my-red: #f44336;
+$my-global: #9c27b0;
+
 * {
     margin: 0 !important;
     padding: 0 !important;
 }
+
 .chat-zone {
     padding-left: 1% !important;
     display: flex;
@@ -43,9 +48,13 @@ $my-pink: #E91E63;
 }
 
 .input-area {
+    box-sizing: border-box;
     border: none;
-    background:  rgba(0, 0, 0, 0.1);;
+    background: rgba(0, 0, 0, 0.1);
     pointer-events: all;
+    resize: vertical; /* Add this line to enable vertical resizing */
+    min-height: 20px; /* Set a minimum height to avoid collapsing */
+    overflow: auto; /* Enable scrolling when input exceeds container height */
 
     &:focus {
         border: none;
@@ -53,10 +62,10 @@ $my-pink: #E91E63;
     }
 }
 
-
 .chat-area > :first-child {
     margin-top: auto !important;
 }
+
 .message-span {
     color: $my-indigo;
 }
@@ -76,9 +85,13 @@ $my-pink: #E91E63;
 }
 
 .message-game {
-    color: #66BB6A;
+    color: $my-green;
 }
 
 .message-error {
-    color: $my-pink;
+    color: $my-red;
+}
+
+.message-global {
+    color: $my-global;
 }
