--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -1,13 +1,13 @@
-<app-header pageTitle="PolyPixels"></app-header>
-    <!-- <app-game-history></app-game-history>  -->
-    <button mat-stroked-button color="primary" class="button" routerLink="/selection">Mode Classique</button>
-    <button mat-stroked-button color="primary" class="button" (click)="selectGameMode()">Temps Limité</button>
-    <button mat-stroked-button color="accent" class="button" routerLink="/config">Configuration</button>
+<app-header [displayShortcuts]="false" pageTitle="PolyPixels"></app-header>
+<!-- <app-game-history></app-game-history>  -->
+<button mat-stroked-button color="primary" class="button" routerLink="/selection">Mode Classique</button>
+<button mat-stroked-button color="primary" class="button" (click)="selectGameMode()">Temps Limité</button>
+<button mat-stroked-button color="accent" class="button" routerLink="/config">Configuration</button>
 
-    <footer class="footer-item">
-        <h4 class="team-name">Équipe 209 Poly</h4>
-        <p>
-            <span>Ahmed El Shami</span>, <span>Rayan Fellah</span>, <span>Skander Hannachi</span>, <span>Mohammed Awad</span>,
-            <span>Ziad Kaabi</span>, <span>Radwan Rahman</span>
-        </p>
-    </footer>
+<footer class="footer-item">
+    <h4 class="team-name">Équipe 209 Poly</h4>
+    <p>
+        <span>Ahmed El Shami</span>, <span>Rayan Fellah</span>, <span>Skander Hannachi</span>, <span>Mohamad Awad</span>, <span>Zied Kaabi</span>,
+        <span>Radwan Rahman</span>
+    </p>
+</footer>
