--- a/client/src/app/pages/selection-page/selection-page.component.html
+++ b/client/src/app/pages/selection-page/selection-page.component.html
@@ -1,2 +1,2 @@
-<app-header pageTitle="Mode Classique"></app-header>
+<app-header [displayShortcuts]="true" pageTitle="Mode Classique"></app-header>
 <app-game-card-grid [isConfig]="false"></app-game-card-grid>
