--- a/client/src/app/pages/configuration-page/configuration-page.component.html
+++ b/client/src/app/pages/configuration-page/configuration-page.component.html
@@ -1,3 +1,3 @@
-<app-header pageTitle="Configuration"></app-header>
+<app-header [displayShortcuts]="true" pageTitle="Configuration"></app-header>
 <app-config-buttons></app-config-buttons>
 <app-game-card-grid id="grid" [isConfig]="true"></app-game-card-grid>
