--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -1,12 +1,22 @@
-$my-indigo: #3F51B5;
-$my-pink: #E91E63;
+$my-indigo: #3f51b5;
+$my-pink: #e91e63;
 
 .main-container {
     display: grid;
-    grid-template-areas: 
+    grid-template-areas:
         'info info'
         'overlay overlay'
         'replay hints';
+}
+.exit {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.exit:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
 }
 .info-container {
     grid-area: info;
