--- a/client/src/app/components/game-card-grid/game-card-grid.component.scss
+++ b/client/src/app/components/game-card-grid/game-card-grid.component.scss
@@ -4,3 +4,12 @@
     grid-template-rows: repeat(1, 1fr);
     grid-gap: 10px;
 }
+
+
+.buttons {
+    margin-top: 20px; 
+}
+
+.buttons button {
+    margin: 0 20px;
+}
