--- a/client/src/app/components/game-card/game-card.component.scss
+++ b/client/src/app/components/game-card/game-card.component.scss
@@ -2,12 +2,15 @@
     padding: 0px !important;
     margin: 0px !important;
 }
-img {
-    width: 50%;
-    height: 50%;
-    max-width: 320px;
-    max-height: 240px;
-}
+
+
+.card-image {
+    width: 100%;
+    max-height: 400px;
+    max-width: 250px;
+    object-fit: cover;
+  }
+
 button {
     padding-left: 1% !important;
     padding-right: 1% !important;
