--- a/client/src/app/components/game-history/game-history.component.html
+++ b/client/src/app/components/game-history/game-history.component.html
@@ -20,7 +20,9 @@
                     <td class="beginning">{{ party.gameStart }}</td>
                     <td class="duration"> {{ party.duration }} </td>
                     <td class="game-mode">{{ party.gameMode }}</td>
-                    <td *ngIf="party.winner1" class="winner">{{ party.player1 }}</td>
+                    <td [ngClass]="{
+                        'winner': party.player2 !== undefined
+                    }" *ngIf="party.winner1">{{ party.player1 }}</td>
                     <td *ngIf="!party.winner1 && !party.gaveUp1" class="name">{{ party.player1 }}</td>
                     <td *ngIf="party.gaveUp1" class="gaveUp">{{ party.player1 }}</td>
                     <td *ngIf="party.winner2" class="winner">{{ party.player2 }}</td>
