--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -1,4 +1,7 @@
 <app-header pageTitle="Bienvenue {{playerName}}"></app-header>
+<button mat-icon-button class="exit" routerLink="/main" matTooltip="Quitter" matTooltipPosition="before">
+    <mat-icon>exit_to_app</mat-icon>
+</button>
 <main class="main-container">
     <div class="info-container">
         <h3>Difficulté: {{ difficulty }}</h3>
