--- a/client/src/app/components/game-card/game-card.component.html
+++ b/client/src/app/components/game-card/game-card.component.html
@@ -3,10 +3,10 @@
         <mat-card-title>{{ sheet.title }}</mat-card-title>
         <mat-card-subtitle>{{ sheet.difficulty }}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content> <img [src]="trustedUrl" alt="Image" class="card-image" /> 
-        <app-game-score [top3Solo]="this.sheet.top3Solo" [top3Multi]="this.sheet.top3Multi"></app-game-score></mat-card-content>
-
-
+    <mat-card-content>
+        <img [src]="trustedUrl" alt="Image" class="card-image" />
+        <app-game-score [top3Solo]="this.sheet.top3Solo" [top3Multi]="this.sheet.top3Multi"></app-game-score
+    ></mat-card-content>
 
     <mat-card-actions class="action-container">
         <button mat-raised-button color="accent" (click)="play()">
