--- a/client/src/app/components/game-card/game-card.component.scss
+++ b/client/src/app/components/game-card/game-card.component.scss
@@ -2,15 +2,12 @@
     padding: 0px !important;
     margin: 0px !important;
 }
-
-
-.card-image {
-    width: 100%;
-    max-height: 400px;
-    max-width: 250px;
-    object-fit: cover;
-  }
-
+img {
+    width: 50%;
+    height: 50%;
+    max-width: 320px;
+    max-height: 240px;
+}
 button {
     padding-left: 1% !important;
     padding-right: 1% !important;
@@ -21,4 +18,8 @@ button {
     justify-content: flex-start;
     align-items: center;
     padding: 1%;
+}
+
+.action-container button {
+    width: 50%;
 }
