--- a/client/src/app/components/game-over-dialog/game-over-dialog.component.html
+++ b/client/src/app/components/game-over-dialog/game-over-dialog.component.html
@@ -9,7 +9,7 @@
         <button mat-mini-fab color="primary" matTooltip="Quitter" [routerLink]="['/home']" mat-dialog-close>
             <mat-icon>exit_to_app</mat-icon>
         </button>
-        <button mat-mini-fab color="primary" matTooltip="reprise" (click)="replay()" mat-dialog-close>
+        <button mat-mini-fab color="primary" matTooltip="reprise" mat-dialog-close>
             <mat-icon>replay</mat-icon>
         </button>
     </div>
