--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -23,13 +23,13 @@
 
     <div class="replay-options-container">
         <button mat-stroked-button color="primary" *ngIf="isReplayPlaying && !isReplayPaused" (click)="pauseReplay()">Pause Replay</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayPaused" (click)="resumeReplay()">Resume Replay</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="restartReplay()">Restart Replay</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(1)">1X</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(2)">2X</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(3)">3X</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="resumeReplay()">Resume Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="" (click)="restartReplay()">Restart Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(1)">1X</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(2)">2X</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(4)">3X</button>
     </div>
-    <app-hint-message class="hints"> </app-hint-message>
+    <app-hint-message #hintMessage class="hints"> </app-hint-message>
     <p id="time-penalty" *ngIf="hint.activateHint">Pénalité: 5 secondes</p>
 
     <div class="chat-zone-container">
