--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -13,7 +13,7 @@
             <h3>{{ opponent.name }}: {{ opponent.differencesFound }}/{{ this.differences }}</h3>
         </div>
         <div class="time-container">
-            <h3>Temps: {{ formattedTime }}</h3>
+            <h3>Temps: {{ isReplayStarted ? this.elapsedTime : formattedTime }}</h3>
         </div>
         <app-hints></app-hints>
     </div>
@@ -22,12 +22,12 @@
     </div>
 
     <div class="replay-options-container">
-        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying && !isReplayPaused" (click)="pauseReplay()">Pause Replay</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="resumeReplay()">Resume Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayStarted && !isReplayPaused" (click)="pauseReplay()">Pause Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayPaused" (click)="resumeReplay()">Resume Replay</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="restartReplay()">Restart Replay</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(1)">1X</button>
         <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(2)">2X</button>
-        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(4)">3X</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayStarted" (click)="setReplaySpeed(4)">4X</button>
     </div>
     <app-hint-message #hintMessage class="hints"> </app-hint-message>
     <p id="time-penalty" *ngIf="hint.activateHint">Pénalité: {{ penaltyTime }} secondes</p>
