--- a/client/src/app/components/hints/hints.component.html
+++ b/client/src/app/components/hints/hints.component.html
@@ -3,5 +3,6 @@
         <mat-icon [ngClass]="(hintService.hintsLeft && hintService.hintsLeft <= 2) || !hintService.hintsLeft ? 'hint-used' : ''">lightbulb</mat-icon>
         <mat-icon [ngClass]="(hintService.hintsLeft && hintService.hintsLeft <= 1) || !hintService.hintsLeft ? 'hint-used' : ''"> lightbulb</mat-icon>
         <mat-icon [ngClass]="(hintService.hintsLeft && hintService.hintsLeft <= 0) || !hintService.hintsLeft ? 'hint-used' : ''">lightbulb</mat-icon>
+        <p>Indice</p>
     </div>
 </div>
