--- a/client/src/app/components/join-limited-time/join-limited-time.component.html
+++ b/client/src/app/components/join-limited-time/join-limited-time.component.html
@@ -6,6 +6,8 @@
         <button mat-stroked-button (click)="selectCoop()" color="primary"><mat-icon class="material-icons">group icon</mat-icon>COOPÉRATIF</button>
     </mat-card-content>
     <mat-card-actions class="cancel">
-        <button mat-stroked-button color="accent" [mat-dialog-close]="true"><mat-icon class="material-icons">cancel</mat-icon>Annuler</button>
+        <button cdkFocusInitial mat-stroked-button color="accent" [mat-dialog-close]="true">
+            <mat-icon class="material-icons">cancel</mat-icon>Annuler
+        </button>
     </mat-card-actions>
 </mat-card>
