--- a/client/src/app/components/reset-dialog/reset-dialog.component.html
+++ b/client/src/app/components/reset-dialog/reset-dialog.component.html
@@ -13,7 +13,7 @@
         </button>
     </mat-dialog-content>
     <mat-dialog-content class="delete">
-        <button mat-button color="primary" (click)="showAlert('Constantes remises à leur valeur par défaut !')">
+        <button mat-button color="primary" (click) ="resetConstants()" (click)="showAlert('Constantes remises à leur valeur par défaut !')">
             <mat-icon color="primary">perm_data_setting</mat-icon> Remettre les constantes par défaut<mat-icon color="primary"
                 >perm_data_setting</mat-icon
             >
