--- a/client/src/app/components/time-limit-play-ground/time-limit-play-ground.component.html
+++ b/client/src/app/components/time-limit-play-ground/time-limit-play-ground.component.html
@@ -1,11 +1,11 @@
 <div id="play-area-container">
     <section>
         <article class="original">
-            <canvas #canvas1 (click)="handleClick($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <canvas #canvas1 id="canvas1" (click)="handleClick($event)" [attr.width]="width" [attr.height]="height"></canvas>
         </article>
         <article class="modified">
             <div #playAreaContainer>
-                <canvas #canvas2 (click)="handleClick($event)" [attr.width]="width" [attr.height]="height"></canvas>
+                <canvas #canvas2 id="canvas2" (click)="handleClick($event)" [attr.width]="width" [attr.height]="height"></canvas>
             </div>
         </article>
     </section>
