--- a/client/src/app/components/time-limit-play-ground/time-limit-play-ground.component.html
+++ b/client/src/app/components/time-limit-play-ground/time-limit-play-ground.component.html
@@ -13,3 +13,5 @@
         <mat-icon>search</mat-icon> Indice
     </button>
 </div>
+<p id="time-penalty" *ngIf="hintService.activateHint">Pénalité: {{ constants.gamePenalty }} secondes</p>
+
