--- a/client/src/app/components/time-limit-play-ground/time-limit-play-ground.component.scss
+++ b/client/src/app/components/time-limit-play-ground/time-limit-play-ground.component.scss
@@ -14,6 +14,11 @@ canvas {
     border: 4px solid black;
 }
 
+#time-penalty {
+    color: red;
+    text-align: center;
+}
+
 section {
     padding: 10px;
     display: grid;
